--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
-<h1>
-  Hello World
-</h1>
+<header>
+  <img src="assets/task-management-logo.png" alt="task-management-logo" />
+  <h1>EasyTask</h1>
+</header>
