--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,7 @@
 <header>
   <img src="assets/task-management-logo.png" alt="task-management-logo" />
-  <h1>EasyTask</h1>
+  <div>
+    <h1>EasyTask</h1>
+    <p>Enterprise-level task management without complication</p>
+  </div>
 </header>
