feat: add user component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,2 @@
-<style>
-  /* .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  } */
-</style>
-
-<main>
-  <app-header>
-
-  </app-header>
-</main>
-<router-outlet />
+<app-header />
+<app-user />
