--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,11 +1,6 @@
 <div>
-  <button
-  (click)="onSelectUser()"
-  >
-    <img
-      [src]="imagePath"
-      [alt]="selectedUser.name"
-    />
-    <span>{{ selectedUser.name }}</span>
+  <button (click)="onSelectUser()">
+    <img [src]="imagePath()" [alt]="selectedUser().name" />
+    <span>{{ selectedUser().name }}</span>
   </button>
 </div>
