--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <main>
   <ul id="users">
     <li>
-      <app-user [avatar]="users[0].avatar" />
+      <app-user [avatar]="users[0].avatar" [name]="users[0].name"/>
     </li>
   </ul>
 </main>
