--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <app-header />
 <main>
   <ul id="users">
-    <li>
-      <app-user [user]="users[0]" (select)="onSelectUser($event)" />
+    @for (item of users; track $index) {
+    <li [id]="item.id">
+      <app-user [user]="item" (select)="onSelectUser($event)" />
     </li>
-    <li>
-      <app-user [user]="users[1]" (select)="onSelectUser($event)" />
-    </li>
+    }
   </ul>
   <app-tasks [name]="selectedUser?.name" />
 </main>
