--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,1 +1,7 @@
-<p>task works!</p>
+<article>
+  <h2>TASK TITLE</h2>
+  <time> TIME </time>
+  <p class="actions">
+    <button>Complete</button>
+  </p>
+</article>
