--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,13 @@
     </li>
     }
   </ul>
-  @if(selectedUser) { <app-tasks [name]="selectedUser.name" />
+  @if(selectedUser) {
+  <app-tasks
+    [tasks]="{
+    userId: selectedUser.id,
+    name: selectedUser.name,
+  }"
+  />
   } @else {
   <p id="fallback">Select a user to see their tasks!</p>
   }
