feat: show details of task

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,6 +1,9 @@
 <article>
-  <h2>TASK TITLE</h2>
-  <time> TIME </time>
+  <h2>{{ task.title }}</h2>
+  <time> {{ task.dueDate }} </time>
+  <p>
+    {{ task.summary }}
+  </p>
   <p class="actions">
     <button>Complete</button>
   </p>
