style: highlight selected user's

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
   <ul id="users">
     @for (item of users; track $index) {
     <li [id]="item.id">
-      <app-user [user]="item" (select)="onSelectUser($event)" />
+      <app-user
+        [selected]="item.id === selectedUserId"
+        [user]="item"
+        (select)="onSelectUser($event)"
+      />
     </li>
     }
   </ul>
