feat: add deletion of tasks

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -7,9 +7,9 @@
   </header>
   <ul>
     @for (item of selectedUserTasks; track $index) {
-      <li [id]="item.id">
-        <app-task [task]="item"></app-task>
-      </li>
+    <li [id]="item.id">
+      <app-task [task]="item" (complete)="onCompleteTask($event)" />
+    </li>
     }
   </ul>
 </section>
