--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -5,6 +5,6 @@
     {{ task.summary }}
   </p>
   <p class="actions">
-    <button>Complete</button>
+    <button (click)="onCompleteTask()">Complete</button>
   </p>
 </article>
