refactor: replace with service

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,8 @@
 @if (isAddingTask) {
-<app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)" />
+<app-new-task
+  [userId]="tasks.userId"
+  (close)="onCloseAddTask()"
+/>
 }
 
 <section id="tasks">
