--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="onCancel()"></div>
+<div class="backdrop" (click)="onClose()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form (ngSubmit)="onSubmit()">
@@ -9,16 +9,26 @@
 
     <p>
       <label for="summary">Summary</label>
-      <textarea id="summary" rows="5" name="summary" [(ngModel)]="enteredSummary"></textarea>
+      <textarea
+        id="summary"
+        rows="5"
+        name="summary"
+        [(ngModel)]="enteredSummary"
+      ></textarea>
     </p>
 
     <p>
       <label for="due-date">Due Date</label>
-      <input type="date" id="due-date" name="due-date" [(ngModel)]="enteredDate"/>
+      <input
+        type="date"
+        id="due-date"
+        name="due-date"
+        [(ngModel)]="enteredDate"
+      />
     </p>
 
     <p class="actions">
-      <button type="button" (click)="onCancel()">Cancel</button>
+      <button type="button" (click)="onClose()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
