--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,5 @@
 @if (isAddingTask) {
-<app-new-task
-  [userId]="tasks.userId"
-  (close)="onCloseAddTask()"
-/>
+<app-new-task [userId]="tasks.userId" (close)="onCloseAddTask()" />
 }
 
 <section id="tasks">
@@ -15,7 +12,7 @@
   <ul>
     @for (item of selectedUserTasks; track $index) {
     <li [id]="item.id">
-      <app-task [task]="item" (complete)="onCompleteTask($event)" />
+      <app-task [task]="item" />
     </li>
     }
   </ul>
